blender crash when using trim tools #120731

Closed
opened 2024-04-17 09:20:24 +02:00 by CODACOD · 3 comments

version used 4.2, d3fb68f518
hardware and OS / windows 10 - gtx 1660super - ryzen 5 3600 - 32GB ram

Short Description
Crash when using trim tools in sculpt mode

Steps to Reproduce

  • Open default scene
  • Switch to sculpt mode
  • Select box trim tool -> draw gesture in viewport
version used 4.2, d3fb68f5183b hardware and OS / windows 10 - gtx 1660super - ryzen 5 3600 - 32GB ram **Short Description** Crash when using trim tools in sculpt mode **Steps to Reproduce** - Open default scene - Switch to sculpt mode - Select box trim tool -> draw gesture in viewport
CODACOD added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2024-04-17 09:20:25 +02:00
Member

Hi, thanks for the report. Can confirm the crash, checking
Edit: Updated the report

Hi, thanks for the report. Can confirm the crash, checking Edit: Updated the report
Member

initialize_cursor_info requires operation so it should be called after init_operation

`initialize_cursor_info` requires `operation` so it should be called after `init_operation`
Pratik Borhade self-assigned this 2024-04-17 10:34:49 +02:00
Author

Hi, thanks for the report. Can confirm the crash, checking
Edit: Updated the report

i download this version to test the new added gestures . but i cant find them . not in the sculpt brushes nor in the asset browser or side bar . im confused 🤨

> Hi, thanks for the report. Can confirm the crash, checking > Edit: Updated the report i download this version to test the new added gestures . but i cant find them . not in the sculpt brushes nor in the asset browser or side bar . im confused 🤨
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-19 20:27:14 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120731
No description provided.