Fix #120731: sculpt trim tool crash

`initialize_cursor_info` requires `gesture_data.operation` initialized.
So call this function after `init_operation`.